<resources>
    <string name="app_name">My Little Startup</string>
    <string name="name_game">My \n\t\t Little \n\t Startup</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="click_location">click location</string>
    <string name="start">START!!!</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="shop">Shop</string>
    <string name="currency">$</string>
    <string name="touch_area">touch_area</string>
    <string name="touch_location">touch_location</string>
    <string name="workers">workers</string>
    <string name="your_money">Your money:</string>
    <string name="now">now:</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="connection_problem_please_restart_page">Connection problem, please restart page</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="sound">Sound</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="issue">issue</string>
    <string name="bug">bug</string>
    <string name="push">push</string>
    <string name="achievements">Achievements</string>
    <string name="promote">Promote</string>
    <string name="layoff">Lay off</string>
    <string name="hire">Hire</string>
    <string name="cancel">Cancel</string>
    <string name="defaultdescription">defaultDescription</string>
</resources>
