<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <Button
        android:id="@+id/button_settings"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_game"
        android:textSize="80sp"
        android:textColor="#0000FF"/>

    <Button
        android:id="@+id/button_start_game"
        android:text="@string/start"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_login"
            android:text="@string/login"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_gravity="start"/>

        <Button
            android:id="@+id/button_signUp"
            android:text="@string/signup"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <ImageButton
            android:id="@+id/achievements_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/touch_area"
            app:srcCompat = "@drawable/achievements_logo"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/leaderboard_button"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:layout_marginStart="140dp"
            android:contentDescription="@string/touch_area"
            android:text="Leaderboard" />

    </LinearLayout>

</LinearLayout>